--- a/views/partial/sidebar.ejs
+++ b/views/partial/sidebar.ejs
@@ -10,12 +10,7 @@
         <div class="menu_container ">
             <div class="menu_items">
                 <ul class="menu_item" style="padding:0;">
-                    <li class="item">
-                        <a href="/" class="link flex">
-                            <i class="bx bx-home-alt"></i>
-                            <span>Anasayfa</span>
-                        </a>
-                    </li>
+                    
                     <% if (user && user.isTrainer) { %>
                         <li class="item">
                             <a href="/users" class="link flex">
@@ -39,7 +34,7 @@
                     </div>
                     <li class="item">
                         <a href="/nutrition" class="link flex">
-                            <i class="bx bx-body"></i>
+                            <i class="bx bxs-bowl-hot"></i>
                             <span>Beslenme Programı</span>
                         </a>
                     </li>
@@ -51,7 +46,7 @@
                     </li>
                     <li class="item">
                         <a href="/nutrition-body" class="link flex">
-                            <i class="bx bxs-magic-wand"></i>
+                            <i class="bx bxs-objects-horizontal-right"></i>
                             <span>Beslenme Planı</span>
                         </a>
                     </li>
