--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
         <form action="/login" method="post">
             
             <div class="form-group">
-                <label for="username">Ad:</label>
+                <label for="username">Kullanıcı Adı:</label>
                 <input type="text" id="username" name="username" placeholder="Adını gir" required autocomplete="off">
             </div>
             <div class="form-group">
