--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -128,6 +128,22 @@
       background-color: #c9302c;
     }
 
+    .edit-profile-btn {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .edit-profile-btn a {
+      color: white;
+      background-color: #007bff;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+
+    .edit-profile-btn a:hover {
+      background-color: #0056b3;
+    }
   </style>
 </head>
 
@@ -149,13 +165,15 @@
                 <h2><%= user.name %> <%= user.surname %></h2>
                 <p class="text-muted">Yaş: <%= new Date().getFullYear() - new Date(user.birthDate).getFullYear() %></p>
                 <div class="profile-info">
-                  <p>Son Giriş Tarihi: <%= new Date(user.lastLoginDate).toLocaleDateString() %></p>
-                  <p>Kayıt Tarihi: <%= new Date(user.registrationDate).toLocaleDateString() %></p>
                   <p>Email: <%= user.email %></p>
                   <p>Telefon: <%= user.telno %></p>
                 </div>
               </div>
-            
+
+              <div class="edit-profile-btn">
+                <a href="/profile/editProfile">Profili Düzenle</a>
+              </div>
+
               <div class="test-results">
                 <div class="result-box" onclick="location.href='/test-results'">
                   <h5>Test Sonuçları</h5>
@@ -166,7 +184,7 @@
               <div class="logout-btn">
                 <a href="/logout">Çıkış Yap</a>
               </div>
-            
+
               <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
             </div>
           </div>
